--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -22,6 +23,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "next": "13.4.12",
     "nodemailer": "^6.9.4",
