--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/redis": "^4.0.11",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "ioredis": "^5.3.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "next": "13.4.12",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
+    "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
