--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "men-database",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,12 +23,12 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "@types/redis": "^4.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "ioredis": "^5.3.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
@@ -34,7 +39,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -47,4 +51,5 @@
     "@types/js-cookie": "^3.0.3",
     "@types/nodemailer": "^6.4.9"
   }
+ 
 }
