--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
-    "mysql2": "^3.6.0",
     "next": "13.4.12",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.4",
+    "pg-hstore": "^2.3.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -51,5 +51,4 @@
     "@types/js-cookie": "^3.0.3",
     "@types/nodemailer": "^6.4.9"
   }
- 
 }
