--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "mysql2": "^3.6.0",
     "next": "13.4.12",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.4",
