--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "mysql2": "^3.6.0",
     "next": "13.4.12",
     "node-cache": "^5.1.2",
+    "node-persistent-cache": "^1.0.4",
     "nodemailer": "^6.9.4",
     "pg-hstore": "^2.3.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
+    "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
