--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "babel-core": "^6.26.3",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "eslint": "8.46.0",
@@ -49,6 +50,8 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
