--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
