--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@vimeo/player": "^2.26.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "babel-core": "^6.26.3",
@@ -43,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.16.3",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "tailwindcss": "3.3.3",
@@ -56,6 +58,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
-    "@types/nodemailer": "^6.4.9"
+    "@types/nodemailer": "^6.4.9",
+    "@types/react-modal": "^3.16.3",
+    "@types/vimeo__player": "^2.18.3"
   }
 }
